server.js,add list files and point index.html, add files list load logic progress.js, add files list handler

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
     <div>
       <span id = "errors"></span>
     </div> 
+    <div>
+      <h3>List uploaded files</h3>
+      <input type="button" value="Upload list" id="upload_list"/>
+      <ul id="files_list">
+        
+      </ul>
+    </div>
 </body>
 <script src="HttpRequest.js" ></script>
 <script src="progress.js" ></script>
