--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <section class="main">
     <header class="major">
-      <h2>This is XMLHttpRequest project</h2>
-      <p>You can upload and download whatever you want</p>
+      <h1>This is XMLHttpRequest project</h1>
+      <h3>You can upload and download whatever you want</h3>
     </header>
     <section class="container">
       <section class="loads">
@@ -26,7 +26,7 @@
             <label class="upload__wrap">
               <input type="file" name="sampleFile" id='uploadinput' />
               <p class="upload__icon">
-                <span class="upload__icon__text">Choose your file</span>
+                <span class="upload__icon__text" id="chooseFile">Choose your file</span>
               </p>
             </label>
             <div class="myProgress">
@@ -46,7 +46,6 @@
             </div>
           </form>
         </div>
-
       </section>
       <div id="errors">
         <p></p>
