--- a/index.html
+++ b/index.html
@@ -16,37 +16,37 @@
     <section class="container">
       <section class="loads">
         <div class="list">
-          <input type="button" value="Refresh" id="upload_list" class="button" />
-          <ul id="files_list"></ul>
+          <input type="button" value="Refresh" class="button upload_list"/>
+          <ul class ="files_list"></ul>
         </div>
         <div class="upload">
           <form id='uploadForm' encType="multipart/form-data">
-            <input type='submit' value='Upload' id="uploadButton" class="button disabled " disabled="true" />
+            <input type='submit' value='Upload' class="button disabled uploadButton" disabled="true" />
             <label class="upload__wrap">
-              <input type="file" name="sampleFile" id='uploadinput' />
+              <input type="file" name="sampleFile" class='uploadinput' />
               <p class="upload__icon">
-                <span class="upload__icon__text" id="chooseFile">Choose your file</span>
+                <span class="chooseFile upload__icon__text">Choose your file</span>
               </p>
             </label>
             <div class="myProgress">
-              <div id="uploadBar" style="width: 0" class="hidden"></div>
+              <div style="width: 0" class="uploadBar hidden"></div>
             </div>
           </form>
         </div>
         <div class="download">
           <form id='downloadForm' autocomplete="off">
-            <input type='submit' value='Download' id="downloadButton" class="button disabled" disabled="true" />
-            <input type="text" name="sampleFile" id="fileName" />
+            <input type='submit' value='Download' class="button disabled downloadButton" disabled="true" />
+            <input type="text" name="sampleFile" class="fileName" />
             <div class="myProgress">
-              <div id="downloadBar" style="width: 0" class="hidden"></div>
+              <div style="width: 0" class="downloadBar hidden"></div>
             </div>
             <div>
-              <img src="" id="image" width="100%">
+              <img src="" class="image" width="100%">
             </div>
           </form>
         </div>
       </section>
-      <div id="errors">
+      <div class="errors">
         <p></p>
       </div>
     </section>
