--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 </body>
 <script src="HttpRequest.js"></script>
 <script src="progress_bar.js"></script>
-<script src="file_utils.js"></script>
-<script src="form_utils.js"></script>
+<script src="file_download_draw.js"></script>
+<script src="form_helpers.js"></script>
+<script src="file_list.js"></script>
 <script src="main.js"></script>
 </html>
